# conductorai-challenge-apryor6

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
numinpdf/: core.py  core__test.py  test.py
